--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,8 @@
     <ul id="main_nav">
       <li><a href="/">HOME</a></li>
       <li><a href="/display">SHOPPING LIST</a></li>
+      <li><a href="/create">CREATE ITEM</a></li>
+      <li><a href="/destroy">DESTROY ITEM</a></li>
     </ul>
     <%= yield %>
   </body>
